feat: Enhance certificate management and user experience across services
This commit introduces several improvements related to certificate management and user interactions. Key changes include:

- Added CourseService and EnrollmentService dependencies to TestRunnerCommand for better course handling.
- Enhanced CertificateController to retrieve and display user-specific certificates with pagination support.
- Updated LessonAPI to generate certificates upon course completion.
- Improved QuizController to handle certificate generation after quiz completion.
- Introduced a new method in EnrollmentService to fetch enrollment progress by user ID.
- Updated the UI templates for better user experience and consistency.

These changes aim to streamline the certificate issuance process and enhance overall user engagement within the application.

--- a/src/main/resources/templates/homePage/course-grid.html
+++ b/src/main/resources/templates/homePage/course-grid.html
@@ -249,7 +249,7 @@ Page content START -->
                                                 <input type="checkbox" class="btn-check" id="btn-check-skill-all">
                                                 <label class="btn btn-light btn-primary-soft-check"
                                                     for="btn-check-skill-all">
-                                                    All levels
+                                                    All level
                                                 </label>
                                             </li>
                                             <!-- Beginner -->
@@ -274,7 +274,7 @@ Page content START -->
                                                 <input type="checkbox" class="btn-check" id="btn-check-skill-advanced">
                                                 <label class="btn btn-light btn-primary-soft-check"
                                                     for="btn-check-skill-advanced">
-                                                    Advanced
+                                                    Advance
                                                 </label>
                                             </li>
                                         </ul>
@@ -511,8 +511,8 @@ Footer END -->
     <!-- Vendors -->
     <script src="assets/vendor/choices/js/choices.min.js"></script>
 
-	<script src="assets/js/functions.js"></script>
-	<script th:src="@{/js/homePage/wishlist.js}"></script>
+    <script src="assets/js/functions.js"></script>
+    <script th:src="@{/js/homePage/wishlist.js}"></script>
     <script th:inline="javascript">
         window.userId = /*[[${currentUserId}]]*/ 0;
     </script>
