--- a/src/main/resources/templates/homePage/course-detail.html
+++ b/src/main/resources/templates/homePage/course-detail.html
@@ -182,8 +182,7 @@ Page content START -->
 																		class="d-inline-block text-truncate ms-2 mb-0 h6 fw-light w-100px w-sm-200px w-md-400px"
 																		th:text="${lesson.title}">Lesson Title</span>
 																</div>
-																<p class="mb-0"
-																	th:text="${lesson.duration/60 + ' min'}">
+																<p class="mb-0" th:text="${lesson.duration + ' min'}">
 																	10m</p>
 															</div>
 															<hr />
@@ -763,7 +762,11 @@ Page content START -->
 										<li class="list-group-item d-flex justify-content-between align-items-center">
 											<span class="h6 fw-light mb-0"><i
 													class="fas fa-fw fa-clock text-primary"></i>Duration</span>
-											<span th:text="${course.duration/60} + 'h'">4h 50m</span>
+											<span th:if="${course.duration >= 60}"
+												th:text="${(course.duration / 60) + 'h ' + (course.duration % 60) + 'm'}">4h
+												50m</span>
+											<span th:if="${course.duration < 60}"
+												th:text="${'0h ' + course.duration + 'm'}">0h 50m</span>
 										</li>
 										<li class="list-group-item d-flex justify-content-between align-items-center">
 											<span class="h6 fw-light mb-0"><i
