--- a/src/main/resources/templates/instructorDashboard/fragments/step4SubmitCourse.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/step4SubmitCourse.html
@@ -67,7 +67,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="businessRulesModalLabel">BẢN ĐIỀU KHOẢN SỬ DỤNG DÀNH CHO GIẢNG VIÊN</h5>
+            <h5 class="modal-title" id="businessRulesModalLabel">TERMS OF USE FOR INSTRUCTORS</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
