--- a/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
+++ b/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
@@ -12,26 +12,33 @@
                             th:text="${course.courseLevel}">All level</a>
                         <button type="button" class="btn btn-link wishlist-toggle p-0"
                             th:data-course-id="${course.courseId}"
-                            th:onclick="'toggleWishlist(this, ' + ${course.courseId} + ')'" style="font-size: 1.2rem;">
-                            <i class="far fa-heart"></i>
+                            th:onclick="'toggleWishlist(this, ' + ${course.courseId} + ')'">
+                            <i class=" far fa-heart"></i>
                         </button>
                     </div>
-                    <h5 class="card-title"><a th:text="${course.title}"
-                            th:href="@{'/home/course-detail?id=' + ${course.courseId}}"></a></h5>
+                    <h5 class="card-title">
+                        <a th:href="@{'/home/course-detail?id=' + ${course.courseId}}">
+                            <span
+                                th:text="${#strings.length(course.title) > 50} ? ${#strings.substring(course.title, 0, 50)} + '...' : ${course.title}"></span>
+                        </a>
+                    </h5>
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
                         <li class="list-inline-item ms-2 h6 fw-light mb-0"
                             th:text="${course.courseReviews.size()} + ' Ratings'">
                             4.0/5.0</li>
                     </ul>
-                    
+
                 </div>
                 <div class="card-footer pt-0 pb-3">
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span class="h6 fw-light mb-0">
                             <i class="far fa-clock text-danger me-2"></i>
-                            <span th:text="${course.duration/60} + 'h'">12h</span>
+                            <span th:if="${course.duration >= 60}"
+                                th:text="${(course.duration / 60) + 'h ' + (course.duration % 60) + 'm'}">12h 56m</span>
+                            <span th:if="${course.duration < 60}" th:text="${'0h ' + course.duration + 'm'}">0h
+                                45m</span>
                         </span>
 
                         <span class="h6 fw-light mb-0">
