--- a/src/main/resources/templates/homePage/fragments/mainContent.html
+++ b/src/main/resources/templates/homePage/fragments/mainContent.html
@@ -608,9 +608,14 @@ Trending courses START -->
                                     </div>
                                     <!-- Time -->
                                     <div class="hstack gap-3">
-                                        <span class="h6 fw-light mb-0"><i
-                                                class="far fa-clock text-danger me-2"></i><span
-                                                th:text="${course.duration} + 'h'">12h</span></span>
+                                        <span class="h6 fw-light mb-0">
+                                            <i class="far fa-clock text-danger me-2"></i>
+                                            <span th:if="${course.getDuration() >= 60}"
+                                                th:text="${(course.getDuration() / 60) + 'h ' + (course.getDuration() % 60) + 'm'}">12h
+                                                56m</span>
+                                            <span th:if="${course.getDuration() < 60}"
+                                                th:text="${'0h ' + course.getDuration() + 'm'}">0h 45m</span>
+                                        </span>
                                         <span class="h6 fw-light mb-0"><i
                                                 class="fas fa-table text-orange me-2"></i><span
                                                 th:text="${course.getTotalLessons()} + ' lectures'">15
@@ -625,7 +630,8 @@ Trending courses START -->
                                         <!-- Avatar -->
                                         <div class="d-flex align-items-center">
                                             <div class="avatar avatar-sm">
-                                                <img class="avatar-img rounded-1" src="assets/images/avatar/10.jpg"
+                                                <img class="avatar-img rounded-1"
+                                                    th:src="@{${course.instructor.profilePicture} ? ${course.instructor.profilePicture} : '/assets/images/avatar/10.jpg'}"
                                                     alt="avatar">
                                             </div>
                                             <p class="mb-0 ms-2"><a href="#" class="h6 fw-light mb-0"
