--- a/src/main/resources/templates/userPage/certificate.html
+++ b/src/main/resources/templates/userPage/certificate.html
@@ -88,15 +88,7 @@
             /* tăng từ mặc định */
         }
 
-        .footer-wave {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 150px;
-            background: linear-gradient(45deg, #000, #d4af37);
-            clip-path: polygon(0 70%, 100% 0, 100% 100%, 0% 100%);
-        }
+
 
         .header-wave {
             position: absolute;
@@ -106,6 +98,23 @@
             height: 150px;
             background: linear-gradient(135deg, #d4af37, #000);
             clip-path: polygon(0 0, 100% 0, 100% 100%, 30% 100%);
+        }
+
+        @page {
+            size: A4 landscape;
+            /* Hoặc dùng mm: 400mm 225mm */
+            margin: 0;
+        }
+
+        body {
+            width: 297mm;
+            /* A4 landscape width */
+            height: 210mm;
+            /* A4 landscape height */
+            margin: 0 auto;
+            border: 10px solid #d4af37;
+            box-sizing: border-box;
+            padding: 20mm;
         }
     </style>
 </head>
@@ -141,20 +150,11 @@
     <p class="text">
         For participating in the <span style="font-weight:bold;">
             <span th:text="${cert.course.title}"></span>
-        </span><br>
+        </span> <br />
         held by <span th:text="${cert.course.instructor.fullName}"></span> on
         <span th:text="${#dates.format(cert.issueDate, 'dd/MM/yyyy')}"></span>.
     </p>
 
-    <!-- <div class="signature">
-        <img th:src="@{/assets/images/signature.svg}" alt="Signature" height="50" /><br>
-        <p class="signature-name">
-            <span th:text="${cert.course.instructor.fullName}"></span>
-        </p>
-        <p>
-            <span th:text="${cert.course.instructor.getAddress()}"></span>
-        </p>
-    </div> -->
 </body>
 
 </html>
