--- a/src/main/resources/templates/userPage/userCertificate.html
+++ b/src/main/resources/templates/userPage/userCertificate.html
@@ -158,6 +158,10 @@
                                     <a th:href="@{'/certificates/generate?userId=' + ${certificate.user.userId} + '&courseId=' + ${certificate.course.courseId}}"
                                         class="btn btn-sm btn-primary-soft me-1 mb-1 mb-md-0"><i
                                             class="bi bi-play-circle me-1"></i>Show certificate</a>
+
+                                    <a th:href="@{'/certificates/download?userId=' + ${certificate.user.userId} + '&courseId=' + ${certificate.course.courseId}}"
+                                        class="btn btn-sm btn-primary-soft me-1 mb-1 mb-md-0"><i
+                                            class="bi bi-download me-1"></i>Download certificate</a>
                                 </td>
                             </tr>
                         </tbody>
