--- a/src/main/resources/templates/homePage/fragments/mainContent.html
+++ b/src/main/resources/templates/homePage/fragments/mainContent.html
@@ -232,7 +232,8 @@ Main Banner START -->
 
                     <div class="d-sm-flex align-items-center justify-content-center justify-content-lg-start">
                         <!-- Button -->
-                        <a href="#" class="btn btn-lg btn-danger-soft me-2 mb-4 mb-sm-0">Get Started</a>
+                        <a th:href="${#authorization.expression('isAuthenticated()') ? '/learning' : '/login'}"
+                            class="btn btn-lg btn-danger-soft me-2 mb-4 mb-sm-0">Get Started</a>
                         <!-- Video button -->
                         <div class="d-flex align-items-center justify-content-center py-2 ms-0 ms-sm-4">
                             <a data-glightbox data-gallery="office-tour"
