fix handle delete category

--- a/src/main/resources/templates/adminDashBoard/fragments/category.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/category.html
@@ -580,6 +580,13 @@
         </div>
         <!-- Card body END -->
     </div>
+    <script>
+        setTimeout(function () {
+            $('#success-alert').fadeOut('slow');
+            $('#error-alert').fadeOut('slow');
+        }, 3000);
+    </script>
+
     <!-- Main card END -->
 </div>
 
